# nar

code/: README.md  pyproject.toml  requirements.txt
code/congrid/: postprocess.py
code/congrid/utils/: con_grid.py  con_grid_util.py  table.py
code/demo/: congrid_io.py  nar_demo.py  nar_pipeline.py  nar_viz.py
code/demo/examples/: MANIFEST.json
code/demo/examples/conrtf/: PMC1064078_table_0.json  PMC1065063_table_1.json  PMC1079868_table_0.json  PMC3022558_table_0.json  PMC3141439_table_1.json  PMC3214788_table_1.json  PMC4826195_table_0.json  PMC4841546_table_1.json  PMC5012797_table_4.json  PMC6180182_table_1.json
code/demo/examples/gt/: PMC1064078_table_0.json  PMC1065063_table_1.json  PMC1079868_table_0.json  PMC3022558_table_0.json  PMC3141439_table_1.json  PMC3214788_table_1.json  PMC4826195_table_0.json  PMC4841546_table_1.json  PMC5012797_table_4.json  PMC6180182_table_1.json
code/demo/examples/rtdetr/: PMC1064078_table_0.json  PMC1065063_table_1.json  PMC1079868_table_0.json  PMC3022558_table_0.json  PMC3141439_table_1.json  PMC3214788_table_1.json  PMC4826195_table_0.json  PMC4841546_table_1.json  PMC5012797_table_4.json  PMC6180182_table_1.json
code/demo/fixtures/conrtf/: tableB.json
code/demo/fixtures/gt/: tableC.json
code/demo/fixtures/rtdetr/: tableA.json  tableB.json  tableC.json
datasets/FinTabNet_TSR_Section/test/: image_filelist.txt
datasets/PubTabNet_TSR_Section/test/: image_filelist.txt
datasets/PubTables-1M_TSR_Section/test/: image_filelist.txt  image_ignore.txt
datasets/SciTSR_Section/test/: image_filelist.txt
